<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/layout_margin"
    tools:context=".ui.login.signup.SignUpFragment">

    <EditText
        android:id="@+id/usernameField"
        style="@style/LoginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:autofillHints="username"
        android:hint="@string/username_field_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/nameField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/nameField"
        style="@style/LoginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:autofillHints="name"
        android:hint="@string/name_field_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/surnameField"
        app:layout_constraintTop_toBottomOf="@id/usernameField" />

    <EditText
        android:id="@+id/surnameField"
        style="@style/LoginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:autofillHints="surname"
        android:hint="@string/surname_field_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/emailField"
        app:layout_constraintTop_toBottomOf="@id/nameField" />

    <EditText
        android:id="@+id/emailField"
        style="@style/LoginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:autofillHints="email"
        android:hint="@string/email_field_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/passwordField"
        app:layout_constraintTop_toBottomOf="@id/surnameField" />

    <EditText
        android:id="@+id/passwordField"
        style="@style/LoginEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:autofillHints="password"
        android:hint="@string/password_field_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintTop_toBottomOf="@id/emailField" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/MainButton.Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField" />

</androidx.constraintlayout.widget.ConstraintLayout>