<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    tools:context=".ui.mainmenu.posts.create.CreatePostFragment">

    <EditText
        android:id="@+id/titleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/title_field_hint"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@id/textField"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_field_hint"
        android:autofillHints="no"
        android:inputType="textAutoCorrect|textLongMessage"
        app:layout_constraintTop_toBottomOf="@id/titleField" />

    <Button
        android:id="@+id/createButton"
        style="@style/MainButton.Action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>